--- a/src/app/index.html
+++ b/src/app/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Platform</title>
+  <title>CDN</title>
 
   <base href='<%= htmlWebpackPlugin.options.baseHref%>' />
 
